[package]
name = "r3bl_macro"
version = "0.10.0"
edition = "2021"
# https://doc.rust-lang.org/cargo/reference/resolver.html#resolver-versions
resolver = "3"
description = """
Internal support for a proc-macro library for reading attributes into structs when
implementing custom derives. Used by workspace in https://crates.io/crates/r3bl_rs_utils.
"""
# Email address(es) has to be verified at https://crates.io/me/
authors = [
  "Nazmul Idris <idris@developerlife.com>",
  "Nadia Idris <nadia@developerlife.com>",
]
repository = "https://github.com/r3bl-org/r3bl-open-core/tree/main/macro"
documentation = "https://docs.rs/r3bl_macro"
homepage = "https://r3bl.com"
license = "Apache-2.0"

[lib]
proc-macro = true
name = "r3bl_macro"
path = "src/lib.rs"

# Documentation for crate layout.
# [General crate layout](https://stackoverflow.com/a/57767413/2085356)
# [Nesting crates for procedural macros](https://stackoverflow.com/a/64288799/2085356)

[dependencies]
r3bl_core = { path = "../core", version = "0.10.0" }

# https://github.com/dtolnay/proc-macro-workshop#debugging-tips
syn = { version = "2.0.82", features = [
  "extra-traits",
  "full",
  "derive",
  "parsing",
] }
quote = "1.0.37"
proc-macro2 = "1.0.88"
paste = "1.0.15"

[dev-dependencies]
# For assert_eq2! macro.
pretty_assertions = "1.4.1"
