[package]
name = "my_core_lib"
version = "0.1.0"
edition = "2021"

# Documentation for crate layout.
# [General crate layout](https://stackoverflow.com/a/57767413/2085356)
# [Nesting crates for procedural macros](https://stackoverflow.com/a/64288799/2085356)

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "*"
