[package]
name = "r3bl_redux"
version = "0.2.6"
edition = "2021"
resolver = "2"
description = "Redux library built using Tokio, concurrent & parallel"
# At most 5 keywords w/ no spaces, each has max length of 20 char.
keywords = ["redux"]
categories = ["rust-patterns", "web-programming"]
readme = "README.md"                              # This is not included in cargo docs.
# Email address(es) has to be verified at https://crates.io/me/
authors = ["Nazmul Idris <idris@developerlife.com>"]
repository = "https://github.com/r3bl-org/r3bl-open-core/tree/main/redux"
documentation = "https://docs.rs/r3bl_redux"
homepage = "https://r3bl.com"
license = "Apache-2.0"

[lib]
name = "r3bl_redux"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# r3bl-open-core.
r3bl_rs_utils_core = { path = "../core", version = "0.9.9" }
r3bl_rs_utils_macro = { path = "../macro", version = "0.9.7" }

# Time
chrono = "0.4.31"
time = "0.3.30"

# Misc
rand = "0.8.5"

# Async
tokio = { version = "1.33.0", features = ["full"] }
async-trait = "0.1.74"
futures = "0.3.28"

# Crossterm & EventStream support.
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures-util = "0.3.28"

# https://github.com/serde-rs/serde.
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"

# get-size.
get-size = { version = "0.1.4", features = ["derive"] }

[dev-dependencies]
# For assert_eq2! macro.
pretty_assertions = "1.4.0"
