[package]
name = "r3bl_redux"
version = "0.2.8"
edition = "2021"
resolver = "2"
description = "Redux library built using Tokio, concurrent & parallel"
# At most 5 keywords w/ no spaces, each has max length of 20 char.
keywords = ["redux"]
categories = ["rust-patterns", "web-programming"]
readme = "README.md"                              # This is not included in cargo docs.
# Email address(es) has to be verified at https://crates.io/me/
authors = [
  "Nazmul Idris <idris@developerlife.com>",
  "Nadia Idris <nadia@developerlife.com>",
]
repository = "https://github.com/r3bl-org/r3bl-open-core/tree/main/redux"
documentation = "https://docs.rs/r3bl_redux"
homepage = "https://r3bl.com"
license = "Apache-2.0"

[lib]
name = "r3bl_redux"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# r3bl-open-core.
r3bl_rs_utils_core = { path = "../core", version = "0.9.16" }   # version is requried to publish to crates.io
r3bl_rs_utils_macro = { path = "../macro", version = "0.9.10" } # version is requried to publish to crates.io

# Time
chrono = "0.4.38"
time = "0.3.36"

# Misc
rand = "0.8.5"

# Async
tokio = { version = "1.40.0", features = ["full"] }
async-trait = "0.1.82"
futures = "0.3.30"

# Crossterm & EventStream support.
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures-util = "0.3.30"

# https://github.com/serde-rs/serde.
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

[dev-dependencies]
# For assert_eq2! macro.
pretty_assertions = "1.4.0"
