[package]
name = "r3bl_script"
version = "0.1.0"
edition = "2024"
# https://doc.rust-lang.org/cargo/reference/resolver.html#resolver-versions
resolver = "3"
description = "Rust support for scripting, with logging, tracing, and ANSI color output"
# At most 5 keywords w/ no spaces, each has max length of 20 char.
keywords = ["scripting", "command", "ANSI", "terminal", "formatted"]
categories = ["command-line-interface", "command-line-utilities"]
readme = "README.md"                                                 # This is not included in cargo docs.
# Email address(es) has to be verified at https://crates.io/me/
authors = [
  "Nazmul Idris <idris@developerlife.com>",
  "Nadia Idris <nadia@developerlife.com>",
]
repository = "https://github.com/r3bl-org/r3bl-open-core/tree/main/script"
documentation = "https://docs.rs/r3bl_script"
homepage = "https://r3bl.com"
license = "Apache-2.0"

[dependencies]
# R3BL awesomeness.
futures-util = "0.3.31"                                         # Async streams.
r3bl_core = { path = "../core", version = "0.10.0" }

# Tokio dependencies.
tokio = { version = "1.42.0", features = ["full"] }

# Tokio tracing dependencies.
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-core = "0.1.33"
chrono = "0.4.39"
textwrap = "0.16.1"

# Error handling.
miette = "7.4.0"
thiserror = "2.0.6"

# Terminal color output.
crossterm = "0.28.1"

# Strum dependencies.
strum = "0.26.3"
strum_macros = "0.26.4"

# Run tests in serial.
serial_test = "3.2.0"

# HTTP client library.
reqwest = { version = "0.12.9", features = ["json"] }
serde_json = "1.0.133"
