[package]
name = "r3bl_terminal_async"
version = "0.5.6"
edition = "2021"
resolver = "2"
description = "Async non-blocking read_line implemenation with multiline editor, with concurrent display output from tasks, and colorful animated spinners"
# At most 5 keywords w/ no spaces, each has max length of 20 char.
keywords = ["cli", "spinner", "readline", "terminal", "async"]
categories = ["command-line-interface", "command-line-utilities"]
readme = "README.md"
# Email address(es) has to be verified at https://crates.io/me/
authors = [
  "Nazmul Idris <idris@developerlife.com>",
  "Nadia Idris <nadia@developerlife.com>",
]
repository = "https://github.com/r3bl-org/r3bl-open-core/tree/main/terminal_async"
documentation = "https://docs.rs/r3bl_terminal_async"
homepage = "https://r3bl.com"
license = "Apache-2.0"

[dependencies]
# Terminal output.
crossterm = { version = "0.28.1", features = ["event-stream"] } # EventStream
futures-util = "0.3.30"                                         # Needed for crossterm EventStream

# r3bl-open-core.
r3bl_rs_utils_core = { path = "../core", version = "0.9.14" }
r3bl_tui = { path = "../tui", version = "0.5.7" }
r3bl_tuify = { path = "../tuify", version = "0.1.26" }

# Unicode support.
unicode-segmentation = "1.11.0"
unicode-width = "0.1.13"

# Enum to string generation.
strum = "0.26.3"
strum_macros = "0.26.4"

# Error handling.
thiserror = "1.0.63"
miette = { version = "7.2.0", features = ["fancy"] }
pretty_assertions = "1.4.0"

# Tokio / Tracing / Logging.
# https://tokio.rs/tokio/topics/tracing
# https://tokio.rs/tokio/topics/tracing-next-steps
tokio = { version = "1.40.0", features = ["full", "tracing"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"
tracing-core = "0.1.32"

# OTel, jaeger, tracing. Implements the types defined in the Otel spec
# Run: `docker run -d -p16686:16686 -p4317:4317 -e COLLECTOR_OTLP_ENABLED=true jaegertracing/all-in-one:latest`
# Open: http://localhost:16686/search
# Example: https://github.com/open-telemetry/opentelemetry-rust/blob/main/examples/tracing-jaeger/src/main.rs
# OpenTelemetry’s API-level view of tracing, spans, etc.
opentelemetry = { version = "0.22.0" }
# Implements the OpenTelemetry APIs.
opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"] }
# The OTel protocol (OTLP) implementation to export data to Jaeger or some other backend.
# tonic is a gRPC crate.
opentelemetry-otlp = { version = "0.15.0", features = ["tonic"] }
# Integration between the tracing crate and the opentelemetry crate.
tracing-opentelemetry = "0.23.0"
# Standardized naming patterns for OpenTelemetry things.
opentelemetry-semantic-conventions = "0.14.0"

# Async stream for DI and testing.
futures-core = "0.3.30"
async-stream = "0.3.5"

[dev-dependencies]
# Testing - r3bl-open-core.
r3bl_test_fixtures = { path = "../test_fixtures" }

[features]
default = ["emacs"]
emacs = []
