[package]
name = "r3bl_terminal_async"
version = "0.5.7"
edition = "2021"
resolver = "2"
description = "Async non-blocking read_line implemenation with multiline editor, with concurrent display output from tasks, and colorful animated spinners"
# At most 5 keywords w/ no spaces, each has max length of 20 char.
keywords = ["cli", "spinner", "readline", "terminal", "async"]
categories = ["command-line-interface", "command-line-utilities"]
readme = "README.md"
# Email address(es) has to be verified at https://crates.io/me/
authors = [
  "Nazmul Idris <idris@developerlife.com>",
  "Nadia Idris <nadia@developerlife.com>",
]
repository = "https://github.com/r3bl-org/r3bl-open-core/tree/main/terminal_async"
documentation = "https://docs.rs/r3bl_terminal_async"
homepage = "https://r3bl.com"
license = "Apache-2.0"

[dependencies]
# Terminal output.
crossterm = { version = "0.28.1", features = ["event-stream"] } # EventStream
futures-util = "0.3.30"                                         # Needed for crossterm EventStream

# r3bl-open-core.
r3bl_core = { path = "../core", version = "0.9.16" }   # version is requried to publish to crates.io
r3bl_tui = { path = "../tui", version = "0.5.9" }      # version is requried to publish to crates.io
r3bl_tuify = { path = "../tuify", version = "0.1.27" } # version is requried to publish to crates.io

# Unicode support.
unicode-segmentation = "1.11.0"
unicode-width = "0.1.13"

# Enum to string generation.
strum = "0.26.3"
strum_macros = "0.26.4"

# Error handling.
thiserror = "1.0.63"
miette = { version = "7.2.0", features = ["fancy"] }
pretty_assertions = "1.4.0"

# Tokio / Tracing / Logging.
# https://tokio.rs/tokio/topics/tracing
# https://tokio.rs/tokio/topics/tracing-next-steps
tokio = { version = "1.40.0", features = ["full", "tracing"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"
tracing-core = "0.1.32"

# Async stream for DI and testing.
futures-core = "0.3.30"
async-stream = "0.3.5"

[dev-dependencies]
# Testing - r3bl-open-core.
r3bl_test_fixtures = { path = "../test_fixtures" }

[features]
default = ["emacs"]
emacs = []
