[package]
name = "r3bl_terminal_async"
version = "0.6.0"
edition = "2024"
# https://doc.rust-lang.org/cargo/reference/resolver.html#resolver-versions
resolver = "3"
description = "Async non-blocking read_line implementation with multiline editor, with concurrent display output from tasks, and colorful animated spinners"
# At most 5 keywords w/ no spaces, each has max length of 20 char.
keywords = ["cli", "spinner", "readline", "terminal", "async"]
categories = ["command-line-interface", "command-line-utilities"]
readme = "README.md"
# Email address(es) has to be verified at https://crates.io/me/
authors = [
  "Nazmul Idris <idris@developerlife.com>",
  "Nadia Idris <nadia@developerlife.com>",
]
repository = "https://github.com/r3bl-org/r3bl-open-core/tree/main/terminal_async"
documentation = "https://docs.rs/r3bl_terminal_async"
homepage = "https://r3bl.com"
license = "Apache-2.0"

[dependencies]
# Terminal output.
crossterm = { version = "0.28.1", features = ["event-stream"] } # EventStream
futures-util = "0.3.31"                                         # Needed for crossterm EventStream

# r3bl-open-core.
r3bl_core = { path = "../core", version = "0.10.0" } # version is required to publish to crates.io
r3bl_log = { path = "../log", version = "0.1.0" }    # version is required to publish to crates.io

# Unicode support.
unicode-segmentation = "1.12.0"
unicode-width = "0.2.0"

# Enum to string generation.
strum = "0.26.3"
strum_macros = "0.26.4"

# Error handling.
thiserror = "1.0.64"
miette = { version = "7.2.0", features = ["fancy"] }
pretty_assertions = "1.4.1"

# Tokio / Tracing / Logging.
# https://tokio.rs/tokio/topics/tracing
# https://tokio.rs/tokio/topics/tracing-next-steps
tokio = { version = "1.40.0", features = ["full", "tracing"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"
tracing-core = "0.1.32"

# Async stream for DI and testing.
futures-core = "0.3.31"
async-stream = "0.3.6"


# For smallstr & smallvec.
smallstr = { version = "0.3.0", features = ["std", "union"] }
smallvec = { version = "1.6.1", features = [
  "union",
  "const_generics",
  "const_new",
] }

[dev-dependencies]
# Testing - r3bl-open-core.

[features]
default = ["emacs"]
emacs = []
