[package]
name = "r3bl_test_fixtures"
version = "0.0.2"
edition = "2021"
resolver = "2"
description = "Test fixtures for the r3bl_* TUI and CLI crates"
# At most 5 keywords w/ no spaces, each has max length of 20 char.
keywords = ["cli", "test", "readline", "terminal", "async"]
categories = ["command-line-interface", "command-line-utilities"]
readme = "README.md"
# Email address(es) has to be verified at https://crates.io/me/
authors = [
  "Nazmul Idris <idris@developerlife.com>",
  "Nadia Idris <nadia@developerlife.com>",
]
repository = "https://github.com/r3bl-org/r3bl-open-core/tree/main/test_fixtures"
documentation = "https://docs.rs/r3bl_test_fixtures"
homepage = "https://r3bl.com"
license = "Apache-2.0"

[dependencies]
# Async stream for DI and testing.
futures-core = "0.3"
async-stream = "0.3.5"
strip-ansi-escapes = "0.2.0"
futures-util = "0.3.30"

# Enum to string generation.
strum = "0.26"
strum_macros = "0.26"

# Error handling.
thiserror = "1.0.58"
miette = { version = "7.2.0", features = ["fancy"] }
pretty_assertions = "1.4.0"

# Tokio / Tracing / Logging.
# https://tokio.rs/tokio/topics/tracing
# https://tokio.rs/tokio/topics/tracing-next-steps
tokio = { version = "1.36.0", features = ["full", "tracing"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"
tracing-core = "0.1.32"
