[package]
name = "r3bl_tui"
version = "0.6.0"
edition = "2021"
# https://doc.rust-lang.org/cargo/reference/resolver.html#resolver-versions
resolver = "3"
description = "TUI library to build modern apps inspired by React, Elm, with Flexbox, CSS, editor component, emoji support, and more"
# At most 5 keywords w/ no spaces, each has max length of 20 char.
keywords = ["tui", "editor", "flexbox", "terminal", "emoji"]
categories = ["command-line-interface", "command-line-utilities"]
readme = "README.md"                                              # This is not included in cargo docs.
# Email address(es) has to be verified at https://crates.io/me/
authors = [
    "Nazmul Idris <idris@developerlife.com>",
    "Nadia Idris <nadia@developerlife.com>",
]
repository = "https://github.com/r3bl-org/r3bl-open-core/tree/main/tui"
documentation = "https://docs.rs/r3bl_tui"
homepage = "https://r3bl.com"
license = "Apache-2.0"

[lib]
name = "r3bl_tui"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# r3bl-open-core.
r3bl_core = { path = "../core", version = "0.10.0" } # version is required to publish to crates.io

# Time
chrono = "0.4.40"

# Misc
rand = "0.9.0"

# Crossterm & EventStream support.
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures-util = "0.3.31"

# https://github.com/serde-rs/serde.
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# strum.
strum = "0.27.1"
strum_macros = "0.27.1"

# Syntax highlighting.
syntect = "5.2.0"

# nom parser combinator.
nom = "8.0.0"

# For examples.
# http://xion.io/post/code/rust-examples.html

# For clipboard.
copypasta-ext = "0.4.4"

# Tokio / Tracing / Logging.
# https://tokio.rs/tokio/topics/tracing
# https://tokio.rs/tokio/topics/tracing-next-steps
tokio = { version = "1.44.2", features = ["full", "tracing"] }
tracing = "0.1.41"
tracing-core = "0.1.33"

# Error handling.
thiserror = "2.0.12"
miette = { version = "7.5.0", features = ["fancy"] }
pretty_assertions = "1.4.1"

# Unicode, grapheme clusters.
unicode-segmentation = "1.12.0"

# For smallstr & smallvec.
smallstr = { version = "0.3.0", features = ["std", "union"] }
smallvec = { version = "1.15.0", features = [
    "union",
    "const_generics",
    "const_new",
] }

# Clap.
# More info: https://stackoverflow.com/a/76131914/2085356
clap = { version = "4.5.36", features = ["derive", "wrap_help", "help"] }

[dev-dependencies]
# For assert_eq2! macro.
pretty_assertions = "1.4.1"
serial_test = "3.2.0"

[features]
default = ["emacs"]
emacs = []
