# cspell:words epoll kqueue termios ospoll osext

[package]
name = "r3bl_tui"
version = "0.7.6"
edition = "2024"
# https://doc.rust-lang.org/cargo/reference/resolver.html#resolver-versions
resolver = "3"
description = "TUI library to build modern apps inspired by React, Elm, with Flexbox, CSS, editor component, emoji support, and more"
# At most 5 keywords w/ no spaces, each has max length of 20 char.
keywords = ["tui", "editor", "flexbox", "terminal", "emoji"]
categories = ["command-line-interface", "command-line-utilities"]
readme = "README.md"                                              # This is not included in cargo docs.
# Email address(es) has to be verified at https://crates.io/me/
authors = [
    "Nazmul Idris <idris@developerlife.com>",
    "Nadia Idris <nadia@developerlife.com>",
]
repository = "https://github.com/r3bl-org/r3bl-open-core/tree/main/tui"
documentation = "https://docs.rs/r3bl_tui"
homepage = "https://r3bl.com"
license = "Apache-2.0"

[lints]
workspace = true

[lib]
name = "r3bl_tui"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Time
chrono = "0.4.42"

# Crossterm & EventStream support.
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures-util = "0.3.31"

# Terminal raw mode support with safe Rust APIs.
rustix = { version = "1.1.2", features = ["termios", "std"] }

# mio for cross-platform async I/O (uses kqueue on macOS, epoll on Linux).
# Used by DirectToAnsi backend to poll stdin and SIGWINCH together.
mio = { version = "1.0", features = ["os-poll", "os-ext"] }

# strum.
strum = "0.27.1"
strum_macros = "0.27.1"

# Syntax highlighting.
syntect = "5.3.0"

# nom parser combinator.
nom = "8.0.0"

# For examples.
# http://xion.io/post/code/rust-examples.html

# For clipboard.
copypasta-ext = "0.4.4"

# Tokio / Tracing / Logging.
# https://tokio.rs/tokio/topics/tracing
# https://tokio.rs/tokio/topics/tracing-next-steps
tokio = { version = "1.48.0", features = ["full", "tracing"] }
tracing = "0.1.41"
tracing-core = "0.1.33"
tracing-subscriber = "0.3.20"
tracing-appender = "0.2.3"

# Error handling.
thiserror = "2.0.17"
miette = { version = "7.6.0", features = ["fancy"] }
pretty_assertions = "1.4.1"

# For smallstr & smallvec.
smallstr = { version = "0.3.0", features = ["std", "union"] }
smallvec = { version = "1.15.0", features = [
    "union",
    "const_generics",
    "const_new",
] }

# Clap.
# More info: https://stackoverflow.com/a/76131914/2085356
clap = { version = "4.5.51", features = ["derive", "wrap_help", "help"] }

# MISSING

# Unicode, grapheme clusters.
unicode-width = "0.2.0"
unicode-segmentation = "1.12.0"

# CustomEventFormatter.
textwrap = { version = "0.16.2", features = ["unicode-linebreak"] }

# Allow const strings to be formatted with format!.
const_format = "0.2.35"

# Misc.
rand = "0.9.1"
sha2 = "0.10.9"
strip-ansi = "0.1.0"
strip-ansi-escapes = "0.2.1"

# Color gradients.
colorgrad = "0.8.0"

# ANSI/VT sequence parsing for PTY multiplexer.
vte = "0.15.0"

# Fast non-cryptographic hash for ColorWheel cache
rustc-hash = "2.1.0"

# Key Value store used to store JSON or bincode encoded values. `kv` is built
# on top of `sled` which currently does not support access across multiple processes.
kv = { version = "0.24.0", features = ["json-value", "bincode-value"] }

# Async stream for DI and testing.
futures-core = "0.3.31"
async-stream = "0.3.6"

# For SharedWriter ids.
uuid = { version = "1.18.1", features = ["v4"] }

# For testing in CI CD environments where terminal is not interactive.
is_ci = "1.2.0"

# HTTP client library (for r3bl_script).
# Reqwest (HTTP client). Use `rustls` instead of `openssl` for TLS support.
reqwest = { version = "0.12.24", default-features = false, features = [
    "json",
    "rustls-tls",
] }


# Convert Rust structs to and from binary representation. For the protocol.
# https://github.com/bincode-org/bincode/blob/trunk/docs/migration_guide.md
bincode = { version = "2.0.1", features = ["serde"] }

# Compression for the protocol.
flate2 = "1.1.5"

# https://github.com/serde-rs/serde.
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# `mimalloc` is a replacement for the default global allocator. It's optimized for
# multi-threaded use cases where lots of small objects are created and destroyed.
# The default allocator is the system allocator that's optimized for single threaded
# use cases.
#
# mimalloc (by Microsoft):
# - https://github.com/microsoft/mimalloc?tab=readme-ov-file#performance
#
# jemalloc (originally by Facebook, now archived):
# - https://www.svix.com/blog/heap-fragmentation-in-rust-applications/
# - https://news.ycombinator.com/item?id=35473271
# - https://crates.io/crates/jemallocator
mimalloc = "0.1.48"

# For PTY support
portable-pty = "0.9.0"

# Desktop notifications
notify-rust = "4.11.3"

# Unix-only dependencies for DirectToAnsi backend.
[target.'cfg(unix)'.dependencies]
# Signal handling for DirectToAnsi backend (SIGWINCH for terminal resize).
signal-hook = "0.3"
signal-hook-mio = { version = "0.2", features = ["support-v1_0"] }

[dev-dependencies]
# For assert_eq2! macro.
serial_test = "3.2.0"
pretty_assertions = "1.4.1"
test-case = "3.3.1"

[features]
default = ["emacs"]
emacs = []
