[package]
name = "r3bl_tuify"
version = "0.1.19"
edition = "2021"
description = "Easily add lightweight TUI capabilities to any CLI apps"
# At most 5 keywords w/ no spaces, each has max length of 20 char.
keywords = ["tui", "cli", "terminal", "color"]
categories = ["command-line-interface", "command-line-utilities"]
readme = "README.md"                                              # This is not included in cargo docs.
# Email address(es) has to be verified at https://crates.io/me/
authors = ["Nazmul Idris <idris@developerlife.com>"]
repository = "https://github.com/r3bl-org/r3bl_rs_utils/tree/main/tuify"
documentation = "https://docs.rs/r3bl_tuify"
homepage = "https://r3bl.com"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rt"
path = "src/main.rs"

[dependencies]
# r3bl_rs_utils
r3bl_ansi_color = { path = "../ansi_color", version = "0.6.8" }
r3bl_rs_utils_core = { path = "../core", version = "0.9.7" }

# Terminal output.
crossterm = "0.27.0"

# Logging.
is-terminal = "0.4.9"
log = { version = "0.4.20", features = ["std"] }

# Clap.
# More info: https://stackoverflow.com/a/76131914/2085356
clap = { version = "4.4.6", features = ["derive", "wrap_help"] }
reedline = "0.25.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
