[package]
name = "r3bl_tuify"
version = "0.2.0"
edition = "2021"
resolver = "3"
description = "Easily add lightweight TUI capabilities to any CLI apps"
# At most 5 keywords w/ no spaces, each has max length of 20 char.
keywords = ["tui", "cli", "terminal", "color"]
categories = ["command-line-interface", "command-line-utilities"]
readme = "README.md"                                              # This is not included in cargo docs.
# Email address(es) has to be verified at https://crates.io/me/
authors = [
  "Nazmul Idris <idris@developerlife.com>",
  "Nadia Idris <nadia@developerlife.com>",
]
repository = "https://github.com/r3bl-org/r3bl-open-core/tree/main/tuify"
documentation = "https://docs.rs/r3bl_tuify"
homepage = "https://r3bl.com"
license = "Apache-2.0"

# This is the default binary to run when running `cargo run`.
# More info: https://stackoverflow.com/a/51790493/2085356
default-run = "rt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rt"
path = "src/bin/rt.rs"

[dependencies]
# r3bl-open-core.
r3bl_core = { path = "../core", version = "0.10.0" }            # version is required to publish to crates.io
r3bl_ansi_color = { path = "../ansi_color", version = "0.7.0" } # version is required to publish to crates.io
r3bl_log = { path = "../log", version = "0.1.0" }               # version is required to publish to crates.io

# serde for JSON serialization.
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"

# Terminal output.
crossterm = "0.28.1"

# Clap.
# More info: https://stackoverflow.com/a/76131914/2085356
clap = { version = "4.5.20", features = ["derive", "wrap_help"] }
reedline = "0.36.0"

# Tokio / Tracing / Logging.
# https://tokio.rs/tokio/topics/tracing
# https://tokio.rs/tokio/topics/tracing-next-steps
tokio = { version = "1.40.0", features = ["full", "tracing"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"
tracing-core = "0.1.32"

# Error handling.
thiserror = "1.0.64"
miette = { version = "7.2.0", features = ["fancy"] }
pretty_assertions = "1.4.1"

[dev-dependencies]
pretty_assertions = "1.4.1"
serial_test = "3.1.1"
