[package]
name = "r3bl_rs_utils"
description = "Misc utility functions for r3bl-open-core repo"
# At most 5 keywords w/ no spaces, each has max length of 20 char.
keywords = ["non-binary-tree"]
# When you change this, make sure to update `README.md` as well.
version = "0.9.16"
edition = "2021"
resolver = "2"
readme = "README.md" # This is not included in cargo docs.
# Email address(es) has to be verified at https://crates.io/me/
authors = [
  "Nazmul Idris <idris@developerlife.com>",
  "Nadia Idris <nadia@developerlife.com>",
]
repository = "https://github.com/r3bl-org/r3bl-rs-utils"
documentation = "https://docs.rs/r3bl_rs_utils"
homepage = "https://r3bl.com"
license = "Apache-2.0"

[lib]
name = "r3bl_rs_utils"
path = "./src/lib.rs"

# Documentation for crate layout.
# [General crate layout](https://stackoverflow.com/a/57767413/2085356)
# [Nesting crates for procedural macros](https://stackoverflow.com/a/64288799/2085356)

[dependencies]
r3bl_rs_utils_core = { path = "../core", version = "0.9.16" } # version is requried to publish to crates.io

[dev-dependencies]
# For assert_eq2! macro.
pretty_assertions = "1.4.0"
