[package]
name = "rustmcp"
version = "1.0.0"
edition = "2024"
authors = ["Dex"]

[dependencies]
rmcp = { version = "0.2.1", features = ["transport-io"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0"
anyhow = "1.0"

# Define this crate in its own standalone workspace so it doesn't pollute or conflict with
# the parent `roc` workspace.
[workspace]

